<resources>
    <string name="app_name">P1 Monitor</string>
    <string name="power_production">Power production</string>
    <string name="settings">Settings</string>
    <string name="power_consumption">Power consumption</string>
    <string name="placeholer_value">Fetching data</string>
    <string name="gas_consumption">Gas consumption</string>
    <string name="month_power">Power consumption this month</string>
    <string name="month_gas">Gas consumption this month</string>
    <string name="today_financial">Power costs today</string>
    <string name="month_financial">Power costs this month</string>
    <string name="label_now">Now</string>
    <string name="label_total_today">Totals for today</string>
    <string name="label_total_month">Totals this month</string>
    <string name="financial_power">Power costs</string>
    <string name="financial_gas">Gas costs</string>

    <string name="KWH">%1$s kWh</string>
    <string name="WATT">%1$s Watt</string>
    <string name="M3">%1$s m3</string>
    <string name="EURO">€ %1$s</string>

    <string name="title_activity_settings">Settings</string>
    <string name="settings_header_server">P1 Monitor Server</string>
    <string name="settings_hostname">Hostname</string>
    <string name="settings_apikey">ApiKey</string>
    <string name="error">Error</string>
    <string name="AboutText">This app is created and maintained by &lt;b&gt;Peter Havekes&lt;/b&gt;.&lt;br/&gt;&lt;br/&gt; The P1 Monitor app can only be used with the &lt;a href="https://www.ztatz.nl/p1-monitor/"&gt;Ztatz P1 monitor software&lt;/a&gt;.&lt;br/&gt;&lt;br/&gt; See &lt;a href="https://github.com/phavekes/p1monitor-android/"&gt;the github repo&lt;/a&gt; for more information on the app.</string>
    <string name="About">About</string>
    <string name="settings_header_auth">API authentication</string>
    <string name="settings_basic_auth_enabled">Enable</string>
    <string name="settings_basic_auth_user">Username</string>
    <string name="settings_basic_auth_password">Password</string>
    <string name="settings_header_basic_auth">Basic Auth</string>
    <string name="basic_auth_user_dialog">Enter the username for basic auth</string>
    <string name="basic_auth_password_dialog">Enter the paswword for basic auth</string>
    <string name="basic_auth_apikey_dialog">The API-key as generated in the P1Monitor settings</string>
    <string name="settings_hostname_dialog">Enter the complete url to the P1Monitor webpage, including http:// or https://</string>
    <string name="dialog_basic_auth_enabled">If you are using basic authentication to protect your P1Monitor or API (e.g. when using a reverse proxy), you can enable basic authentication here. Also enter the username and password below.</string>
    <string name="error_no_basurl">ERROR: No hostname in settings</string>
    <string name="refreshing">Refreshing ...</string>


</resources>